<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        style="@style/MovieLabelsWithPadding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_title" />

    <TextView
        android:id="@+id/tv_movie_title"
        style="@style/MovieValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/MovieLabelsWithPadding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_release_date" />

    <TextView
        android:id="@+id/tv_movie_release_date"
        style="@style/MovieValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/MovieLabelsWithPadding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_vote_average" />

    <TextView
        android:id="@+id/tv_movie_vote_average"
        style="@style/MovieValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</merge>