<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:minHeight="220dp"
            android:weightSum="1">

            <ImageView
                android:id="@+id/iv_movie_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:scaleType="centerCrop"
                android:contentDescription="@string/movie_poster_alt"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    style="@style/MovieLabels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_title" />

                <TextView
                    android:id="@+id/tv_movie_title"
                    style="@style/MovieValues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/MovieLabels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_release_date" />

                <TextView
                    android:id="@+id/tv_movie_release_date"
                    style="@style/MovieValues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/MovieLabels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_vote_average" />

                <TextView
                    android:id="@+id/tv_movie_vote_average"
                    style="@style/MovieValues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/MovieLabels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_plot_synopsis" />

        <TextView
            android:id="@+id/tv_movie_plot_synopsis"
            style="@style/MovieValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>